[package]
name = "fntoc"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
colored = "2.0"
crossterm = "0.23.2"
getch = "0.3.1"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }

#i_o = { path = "../i_o" }
